--- a/src/Pages/ComoVotar/style.css
+++ b/src/Pages/ComoVotar/style.css
@@ -120,7 +120,7 @@
     
 }
 .izquierda{
-    margin-top: 30px;
+    margin-top: 0px;
     width: 100%;
     height: 300px;
 }
@@ -128,7 +128,7 @@
     float: left;
     margin-left: -19%;
     width: 350px;
-    margin-top: 19px;
+    margin-top: -auto;
     margin-right: 35px;
 }
 .footer{
