--- a/src/Pages/DeberHacer/style.css
+++ b/src/Pages/DeberHacer/style.css
@@ -43,16 +43,16 @@
     text-align: center;
     margin-top: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    color: black;
-
+    font-weight: 100;
 }
 .btn-primary{
     background-color: rgb(224, 212, 236);
     height:40px;
-    width: 118px;
+    width: 128px;
     text-align: center;
     font-size:20px;
-    margin-left: 58px;
+    margin: auto;
+    margin-top: 30px;
 }
 .card-img-bottom{
     margin-top:10px;
