--- a/src/Pages/Regis/styleRegis.css
+++ b/src/Pages/Regis/styleRegis.css
@@ -2,17 +2,10 @@
     text-align: center;
     margin: auto;
 }
-.form-groupp{
-    text-align: center;
-    margin-top: 80px;
-    font-size: 100px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
 .form-group{
     width: 40%;
     margin:auto;
-    margin-top: 50px;
+    margin-top: 40px;
 }
 .form-control{
     height: 45px;
@@ -28,7 +21,6 @@
     font-size: 20px;
     font-weight: bold;
     color: black;
-
 }
 .loguitos{
     margin-top: 50px;
@@ -49,7 +41,6 @@
     font-size: 25px;
     color: #0e0c0c;
     border-radius: 6px;
-
 }
 .b{
     background-color:#87bbeb;
@@ -58,7 +49,6 @@
     width: 40%;
     margin: auto;
     border-radius: 20px;
-
 }
 .boton_personalizado:hover{
     text-decoration:none;
@@ -69,4 +59,14 @@
 }
 .vacio{
     padding: 25px;
+}
+.nombreApellido{
+    height: 45px;
+    font-size: 17px;
+    border-radius: 10px;
+    margin:2%;
+    width: 296px;
+    border-style: solid;
+    border-color: #CED4DA;
+    
 }
