--- a/src/Pages/Foros_Principal/estilo5.css
+++ b/src/Pages/Foros_Principal/estilo5.css
@@ -1,3 +1,31 @@
+.barrita{
+    background-color: #ffbd59;
+    height: 90px;
+    color: black;
+    width: 100%;
+}
+
+.logo{
+    margin-top: 10px;
+    margin-left: 30px;
+}
+
+.elements{
+    margin-top: 15px;
+    color: black;
+    font-size: 15px;
+    margin-left: 40px;
+}
+
+.elements__1{
+    margin-left: 700px;
+}
+
+.elements__down{
+    color: black;
+    font-size: 14px;
+}
+
 .Titulo-Mapa1{
     font-size: 60px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -23,10 +51,6 @@
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     width: 60%;
-}
-
-.voto-img{
-    width: 100%;
 }
 
 .vacio{
