--- a/src/Pages/Vida_Politica/style.css
+++ b/src/Pages/Vida_Politica/style.css
@@ -24,37 +24,30 @@
     margin-left:  700px ;
     
 }
-/* .titulo{
-    font-size: 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 1500px;
-    text-align: center;
-} */
 
 .titulo2{
     color: black;
     text-align: center;
     font-family: Arial,;
     font-weight: bold;
-}
-.vacio{
-    color: white;
-    text-align: left;
-    margin: left;
-}
+    margin-top: 3%;
+} 
+
 .parrafo{
     
     justify-content: center;
     margin: auto;
     text-align: center;
-    
+    margin-top: 5%;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 60%
+    width: 90%
 }
 .imagen_banner{
     text-align: center;
-    margin: auto;
+  
+    width: 100%;
+    
 }
 .card{
     border-color: white;
@@ -80,6 +73,7 @@
      text-align: center;
      margin: auto;
      font-family: Arial;
+     margin-top: 10%;
  }
 .card-final{
     background-color: rgb(255, 255, 255);
@@ -89,6 +83,7 @@
     border-color: rgb(255, 255, 255);
     border-radius: 8px;
     font-family: Arial;
+    margin-top: 5%;
 }
 .boton_1{
     text-align: center;
@@ -96,7 +91,97 @@
     margin-top: 30px;
     
 }
-.btn_1{
+
+.TituloC{
+    font-size: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+    text-align: center;
+    margin-top: 5%;
+}
+.Titulo2C{
+    font-size: 65px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+    text-align: center;
+    
+}
+.Parrafo_c{
+    text-align: center;
+    margin: auto;
+    background-color: powderblue;
+    width: 65%;
+}
+.ParrafoC{
+    text-align: center;
+    margin: auto;
+    background-color: powderblue;
+    width: 100%;
+    padding: 7%;
+
+    
+}
+.TextoC{
+    font-size: 20px;
+}
+.Parrafo_{
+    text-align: center;
+    margin: auto;
+    margin-bottom: 3%;
+  
+}
+
+.Textoc{
+    font-size: 20px;
+    width: 65%;
+    text-align: center;
+    margin: auto;
+    margin-bottom: 5%;
+
+}
+.titleC{
+    font-size: 45px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+    text-align: center;
+    margin-top: 5%;
+}
+.titlec{
+    font-size: 35px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+    text-align: center;
+}
+.Personas{
+    text-align: center;
+    margin: auto;
+    display: flex;
+    margin-top: 5%;
+}
+.Niño{
+    margin-left: 5%;
+    width: 40%;
+    height: 40%;
+}
+.Adolescente{
+    width: 40%;
+    height: 40%;
+}
+.Adulto{
+    margin-right: 5%;
+    width: 40%;
+    height: 40%;
+}
+.imgP{
+    width: 40%;
+    height: 40%;
+}
+.ParrafoP{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 5%;
+}
+.boton{
     background-color: #ffffff;
     font-family: Arial;
     font-weight: bold;
@@ -104,17 +189,5 @@
     margin-top: 30px;
     border-radius: 5px;
     color: #000000;
-    
-}
-.TituloC{
-    font-size: 50px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 1500px;
-    text-align: center;
-}
-.Titulo2C{
-    font-size: 35px;
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-weight: 1500px;
-    text-align: center;
+    margin-top: 5%; 
 }
