--- a/src/Pages/Vida_Politica_Adolescente/style4.css
+++ b/src/Pages/Vida_Politica_Adolescente/style4.css
@@ -122,8 +122,37 @@
     font-family: Arial;
     font-weight: bold;
     font-size: 25px;
-    margin-top: 30px;
+    margin-top: -180px;
     border-radius: 5px;
     
     
+}
+.imagenesC{
+    text-align: center;
+    margin: auto;
+    display: flex;
+    margin-top: 5%;
+}
+.personero{
+    margin-left: 30%;
+    font-size: 20px;
+    
+}
+.contralor{
+    margin-right: 30%;
+    font-size: 20px;
+}
+.AdolescenteC{
+    font-size: 50px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+    text-align: center;
+    margin-top: 5%;
+}
+.AdolescenteImg{
+    width: 100%;
+}
+.ImgC{
+ width: 50%;
+ height: 80%;
 }
