--- a/src/Pages/Vida_Politica/style.css
+++ b/src/Pages/Vida_Politica/style.css
@@ -30,8 +30,28 @@
     text-align: center;
     font-family: Arial,;
     font-weight: bold;
-    margin-top: 3%;
+    margin-top: 9%;
 } 
+
+.titulo2P{
+    color: dodgerblue;
+    text-align: center;
+    font-family: Arial,;
+    font-weight: bold;
+    margin-top: 3%;
+    text-transform: uppercase;
+    font-size: 29px;
+}
+
+.textoFinal{
+    color: dodgerblue;
+    text-align: center;
+    font-family: Arial,;
+    font-weight: bold;
+    margin-top: 3%;
+    text-transform: uppercase;
+    font-size: 23px;
+}
 
 .parrafo{
     
@@ -41,8 +61,19 @@
     margin-top: 5%;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
-    width: 90%
 }
+
+.parrafoConte{
+    justify-content: center;
+    margin: auto;
+    text-align: center;
+    margin-top: 5%;
+    font-size: 20px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 70%
+}
+
+
 .imagen_banner{
     text-align: center;
   
@@ -84,6 +115,7 @@
     border-radius: 8px;
     font-family: Arial;
     margin-top: 5%;
+    width: 45%;
 }
 .boton_1{
     text-align: center;
@@ -122,7 +154,7 @@
     
 }
 .TextoC{
-    font-size: 20px;
+    font-size: 21px;
 }
 .Parrafo_{
     text-align: center;
@@ -145,32 +177,42 @@
     font-weight: 1500px;
     text-align: center;
     margin-top: 5%;
+    text-transform: uppercase;
 }
 .titlec{
     font-size: 35px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 1500px;
     text-align: center;
+    text-transform: uppercase;
 }
 .Personas{
     text-align: center;
     margin: auto;
     display: flex;
     margin-top: 5%;
+    background-color: khaki;
+    padding: 4%;
 }
 .Niño{
     margin-left: 5%;
     width: 40%;
     height: 40%;
+    margin: auto;
+    text-align: center;
 }
 .Adolescente{
     width: 40%;
     height: 40%;
+    margin: auto;
+    text-align: center;
 }
 .Adulto{
     margin-right: 5%;
     width: 40%;
     height: 40%;
+    margin: auto;
+    text-align: center;
 }
 .imgP{
     width: 40%;
@@ -178,9 +220,21 @@
 }
 .ParrafoP{
     text-align: center;
-    font-size: 15px;
+    font-size: 17px;
     margin-top: 5%;
+    margin: auto;
+    text-align: center;
 }
+
+.ConteParrafoP{
+    text-align: center;
+    font-size: 15px;
+    width: 70%;
+    margin: auto;
+    text-align: center;
+    margin-top: 9%;
+}
+
 .boton{
     background-color: #ffffff;
     font-family: Arial;
