--- a/src/Pages/Vida_Politica_Personero/styleC.css
+++ b/src/Pages/Vida_Politica_Personero/styleC.css
@@ -25,7 +25,7 @@
     
 }
 .Personero_C{
-    font-size: 50px;
+    font-size: 70px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 1500px;
     text-align: center;
@@ -34,12 +34,12 @@
 .Parrafo_C{
     text-align: center;
     margin: auto;
-    font-size: 20;
+    font-size: 20px;
 }
 .Parrafo_C1{
     text-align: center;
     margin: auto;
-    font-size: 20;
+    font-size: 20px;
     margin-top: 2%;
 }
 .btn_3{
@@ -51,6 +51,72 @@
     font-size: 25px;
     margin-top: -180px;
     border-radius: 5px;
-    
-    
+}
+
+.ContenedorParrafo{
+    text-align: center;
+    margin: auto;
+    width: 70%;
+}
+
+.img-Personero{
+    width: 100%;
+}
+
+
+.parrafox{
+    font-size: 20px;
+}
+
+.ConteParrafox{
+    font-size: 20px;
+    width: 55%;
+    text-align: center;
+    margin: auto;
+    margin-top: 5%;
+}
+
+.ConteParrafox_1{
+    font-size: 20px;
+    width: 100%;
+    text-align: center;
+    margin: auto;
+}
+
+.ConteParrafox1{
+    text-align: center;
+    margin: auto;
+    background-color: powderblue;
+    padding: 4%;
+}
+
+.ConteParrafox2{
+    text-align: center;
+    margin: auto;
+    margin-top: 5%;
+    background-color: powderblue;
+    padding: 3%;
+}
+
+.ContenedorPersoneroFinal{
+    display: flex;
+    margin: auto;
+    text-align: center;
+    margin-top: 5%;
+}
+
+.ContenPerFi{
+    width: 30%;
+    padding: 2%;
+    background-color: #FFDF5C;
+    border-radius: 20px;
+    margin: 2%;
+}
+
+.parrafoPer{
+    text-align: center;
+    margin: auto;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 17px;
 }
