--- a/src/Pages/ComoVotar/style.css
+++ b/src/Pages/ComoVotar/style.css
@@ -26,7 +26,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 1500px;
     text-align: center;
-    margin-top: 383px;
+    margin-top: 100px;
     color:black;
     margin-bottom: 30px;
 }
@@ -58,13 +58,12 @@
     margin-left: 30%;
 }
 
-.text-break {
-    font-size: 20px;
-    
+.textIntroduccion {
     font-family: Arial, Helvetica, sans-serif;
     margin-right: 90px;
     margin-top: 5%;
-    font-size: 24px;
+    font-size: 20px;
+    width: 100%;
 }
 
 .intrucciones{
@@ -87,8 +86,10 @@
     font-weight: bold;
 }
 .parrafoInstrucciones{
-    width: 50%;
+    width: 70%;
     margin:auto;
+   
+
 }
 .btn{
     color: rgb(0, 0, 0);
@@ -112,10 +113,9 @@
     margin-top: 50px;
     
 }
-.text{
+.textParrafo{
     text-align: center;
     font-size: 22px;
-    color: rgb(0, 0, 0);
     font-family: Arial, Helvetica, sans-serif;
     
 }
@@ -127,7 +127,7 @@
 .urna{
     float: left;
     margin-left: -19%;
-    width: 350px;
+    width: 340px;
     margin-top: -auto;
     margin-right: 35px;
 }
