--- a/src/Pages/Vida_Politica_Adolescente/style4.css
+++ b/src/Pages/Vida_Politica_Adolescente/style4.css
@@ -226,3 +226,19 @@
     width: 76%;
     height: 76%;
 }
+.footer{
+    background-color: #D6D6D6;
+    text-align: center;
+    padding: 3%;
+}
+
+.footer_parrafo{
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+}
+
+.footer_image{
+    width: 3%;
+    height: 3%;
+}
