--- a/src/Pages/Pregunta/style6.css
+++ b/src/Pages/Pregunta/style6.css
@@ -50,3 +50,19 @@
     text-align: center;
     font-size: 20px;
 }
+.footer{
+    background-color: #D6D6D6;
+    text-align: center;
+    padding: 3%;
+}
+
+.footer_parrafo{
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+}
+
+.footer_image{
+    width: 3%;
+    height: 3%;
+}
