--- a/src/Pages/Vida_Politica/style.css
+++ b/src/Pages/Vida_Politica/style.css
@@ -245,3 +245,19 @@
     color: #000000;
     margin-top: 5%; 
 }
+.footer{
+    background-color: #D6D6D6;
+    text-align: center;
+    padding: 3%;
+}
+
+.footer_parrafo{
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+}
+
+.footer_image{
+    width: 3%;
+    height: 3%;
+}
