--- a/src/Pages/Vida_Politica_Adulto/style5.css
+++ b/src/Pages/Vida_Politica_Adulto/style5.css
@@ -235,3 +235,19 @@ float: right;
     width: 100%;
     height: 100%;
 }
+.footer{
+    background-color: #D6D6D6;
+    text-align: center;
+    padding: 3%;
+}
+
+.footer_parrafo{
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+}
+
+.footer_image{
+    width: 3%;
+    height: 3%;
+}
