--- a/src/Pages/Vida_Politica_Colegio/style3.css
+++ b/src/Pages/Vida_Politica_Colegio/style3.css
@@ -40,7 +40,19 @@
     margin-top: 30px;
     font-size: 18px;
     font-family: Arial;
-    width: 80%;
+    width: 70%;
+    justify-content: center;
+    margin: auto;
+    text-align: center;
+    margin-top: 50px;
+    
+}
+.Parrafo_2{
+    
+    margin-top: 30px;
+    font-size: 18px;
+    font-family: Arial;
+    width: 70%;
     justify-content: center;
     margin: auto;
     text-align: center;
@@ -56,9 +68,52 @@
     margin: auto;
     font-size: 20px;
     color: black;
+    margin-top: 5%;
     
 }
 .colegio{
     text-align: center;
     margin: auto;
+    margin-top: 5%;
+}
+.bannerColegio{
+    width: 100%;
+}
+.CirculoColegio{
+    display: flex;
+    text-align: center;
+    margin: auto;
+    margin-top: 5%;
+}
+.Imagen1Colegio{
+    width: 15%;
+    height: 15%;
+    margin-left: 20%;
+    
+}
+.Imagen2Colegio{
+    width: 15%;
+    height: 15%;
+    margin: auto;
+}
+.Imagen3Colegio{
+    width: 15%;
+    height: 15%;
+    margin-right: 20%;
+}
+.footer{
+    background-color: #D6D6D6;
+    text-align: center;
+    padding: 3%;
+}
+
+.footer_parrafo{
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+}
+
+.footer_image{
+    width: 3%;
+    height: 3%;
 }
