--- a/src/Pages/Vida_Politica_Contralor/stylec2.css
+++ b/src/Pages/Vida_Politica_Contralor/stylec2.css
@@ -114,3 +114,19 @@
     text-transform: uppercase;
     color: dodgerblue;
 }
+.footer{
+    background-color: #D6D6D6;
+    text-align: center;
+    padding: 3%;
+}
+
+.footer_parrafo{
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+}
+
+.footer_image{
+    width: 3%;
+    height: 3%;
+}
