--- a/src/Pages/Vida_Politica_Niño/style2.css
+++ b/src/Pages/Vida_Politica_Niño/style2.css
@@ -221,3 +221,19 @@ h4{
     padding: 4%;
     margin-top: 50px;
 }
+.footer{
+    background-color: #D6D6D6;
+    text-align: center;
+    padding: 3%;
+}
+
+.footer_parrafo{
+    font-size: 15px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+}
+
+.footer_image{
+    width: 3%;
+    height: 3%;
+}
