--- a/src/Pages/Principal/estilo1.css
+++ b/src/Pages/Principal/estilo1.css
@@ -39,35 +39,44 @@
 }
 
 .image{
-    width: 180px;
-    height: 180px;
-    margin-top: 30px;
-    margin-bottom: 20px;
-    margin-left: 18%;
+    width: 300px;
+    height:500px;
+}
+
+.ConteTemas{
+    display: flex;
+    text-align: center;
+    margin: auto;
+    margin-top: 4%;
+}
+
+.Temas{
+    text-align: center;
+    margin: auto;
 }
 
 .text{
     margin-top: 40px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     text-align: center;
     font-size: 30px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 1000px;
-    margin-bottom: 40px;
 }
 
 .text_1{
     margin: auto;
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
-    width: 70%;
+    width: 90%;
 }
 
 .parra_text{
-    margin: auto;
-    text-align: center;
     font-size: 16px;
     font-family: Arial, Helvetica, sans-serif;
+    width: 70%;
+    text-align: center;
+    margin: auto;
 }
 
 .contenedor{
@@ -86,7 +95,7 @@
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 1500px;
     text-align: center;
-    margin-top: 160px;
+    margin-top: 100px;
 }
 
 .image_voto{
@@ -113,6 +122,7 @@
     margin: auto;
     text-align: center;
     margin-top: 70px;
+    margin-bottom: 100px;
     font-size: 20px;
     font-family: Arial, Helvetica, sans-serif;
     width: 60%;
@@ -145,9 +155,7 @@
 }
 
 .carru{
-    margin-top: 60px;
     justify-items: center;
-    margin-left: 50px;
 }
 
 /*Diseño Intro_Foros*/
