--- a/src/Pages/Vida_Politica/style.css
+++ b/src/Pages/Vida_Politica/style.css
@@ -156,16 +156,22 @@
 .TextoC{
     font-size: 21px;
 }
-.Parrafo_{
+.ParrafoVida1{
     text-align: center;
     margin: auto;
     margin-bottom: 3%;
-  
+    width: 70%;
+    margin-top: 5%;
+}
+
+.ParrafoVida{
+    text-align: center;
+    margin: auto;
+    width: 70%;
 }
 
 .Textoc{
     font-size: 20px;
-    width: 65%;
     text-align: center;
     margin: auto;
     margin-bottom: 5%;
@@ -191,7 +197,7 @@
     margin: auto;
     display: flex;
     margin-top: 5%;
-    background-color: khaki;
+    background-color:#FFDF5C;
     padding: 4%;
 }
 .Niño{
@@ -233,6 +239,20 @@
     margin: auto;
     text-align: center;
     margin-top: 9%;
+}
+
+.ConteImagenVidaPoli{
+    display: flex;
+    margin: auto;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.ImagenVidaPoli{
+    width: 150px;
+    height: 150px;
+    text-align: center;
+    padding: 12px;
 }
 
 .boton{
