--- a/src/Pages/Foros_Principal/estilo5.css
+++ b/src/Pages/Foros_Principal/estilo5.css
@@ -94,6 +94,7 @@
     text-align: center;
   font-size: 20px;
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  text-transform: lowercase;
 }
 
 .conte-parti{
