--- a/src/Pages/Pregunta1/estilo6.css
+++ b/src/Pages/Pregunta1/estilo6.css
@@ -41,7 +41,7 @@
 
 .texto_Pregunta{
     margin: auto;
-    width: 80%;
+    width: 100%;
     height: 120px;
 }
 
@@ -50,15 +50,19 @@
     font-size: 14px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 1500px;
-    padding: 3%;
+    padding: 15%;
+
 }
 
-.btn{
-    background-color: aquamarine;
+.BotonPublicar{
+    background-color: lightblue;
+    padding-left: 3%;
+    padding-right: 3%;
+    border-radius: 5px;
 }
 
-.conte-btn{
-    margin-left: 45%;
+.conte-BotonPublicar{
+    margin-left: 37%;
     margin-bottom: 4%;
     margin-top: 1%;
 }
