--- a/src/Pages/Razones/estilo3.css
+++ b/src/Pages/Razones/estilo3.css
@@ -86,3 +86,17 @@
     font-family: Arial, Helvetica, sans-serif;
     width: 60%;
 }
+
+.VideoRazones{
+    margin: auto;
+    text-align: center;
+    margin-top: 3%;
+}
+
+.tituloImportancia{
+    font-size: 35px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: 1500px;
+    text-align: center;
+    margin-top: 5%;
+}
