--- a/src/Pages/Pregunta3/estilo8.css
+++ b/src/Pages/Pregunta3/estilo8.css
@@ -1,3 +1,7 @@
+.Fondo_Pagina_Comentario{
+    background-color: rgba(211, 211, 211, 0.493);
+}
+
 .conte-Pregunta3{
     background-color:#FF8E8E;
     padding: 0.5%;
@@ -69,4 +73,55 @@
     background-color: #F1D049;
     color: #F1D049;
     margin-top: 4%;
+}
+
+.Fondo_Comentario{
+    background-color: rgba(255, 255, 0, 0.281);
+    padding: 2%;
+    margin-left: 7%;
+    margin-right: 7%;
+}
+
+.Parrafo_Comen{
+    font-size: 18px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    margin-top: 3%;
+    margin-bottom: 2%;
+    text-align: center;
+}
+
+.conte_Respuesta{
+    background-color: white;
+    border-radius: 12%;
+}
+
+.titulo_Respuesta{
+    background-color: rgba(128, 128, 128, 0.445);
+    border-radius: 15%;
+    display: flex;
+}
+
+.titulo_Respuesta_Letra{
+    font-size: 18px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-align: left;
+    margin-left: 2%;
+    color: black;
+    padding: -2%;
+    margin-top: 9px;
+}
+
+.parrafo_Respuesta_Letra{
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    text-align: left;
+    margin-left: 1.8%;
+    font-weight: normal;
+}
+
+.imagen_comentario{
+    text-align: left;
+    margin-left: 4%;
+    width: 35px;
+    height: 45px;
 }
