Correcion de tíldes

--- a/src/Pages/Vida_Politica/style.css
+++ b/src/Pages/Vida_Politica/style.css
@@ -197,7 +197,7 @@
     margin: auto;
     display: flex;
     margin-top: 5%;
-    background-color:#FFDF5C;
+    background-color: rgba(255, 255, 0, 0.486);
     padding: 4%;
 }
 .Niño{
